# iot-esp32-display

./: .gitignore  Cargo.toml  README.md  build.rs  code.py  sdkconfig.defaults
.cargo/: config.toml
OLD/arduino/big_epaper/: adafruit_io.cpp  big_epaper.ino  graph.h
OLD/arduino/tri_color/: README.md  graph.cpp
arduino/tri_color/: flash.sh  graph.h  tri_color.ino
assets/: ina219.py
big_epaper/: README.md  adafruit_io.cpp  adafruit_io.h  arduino_secrets_TEMPLATE.h  big_epaper.ino  display.cpp  display.h  flash.sh  graph.cpp  graph.h  twelvedata.cpp  twelvedata.h
cpp/: adafruit_io.h  graph.cpp
rust/.cargo/: config.toml
rust/src/: main.rs
src/: main.rs  secrets.rs.example
tri_color/: README.md  adafruit_io.cpp  adafruit_io.h  code.py  flash.sh  graph.cpp  graph.h  tri_color.ino
