[package]
name = "esp32display"
version = "0.1.0"
authors = ["Tim Boldt <tim.boldt@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48" }
anyhow = "1.0.83"
embedded-svc = "0.27.1"
epd-waveshare = "0.5.0"
embedded-hal = "1.0.0"
embedded-graphics = "0.8.1"
esp-idf-hal = "0.43.1"
tinybmp = "0.5.0"

[build-dependencies]
embuild = "0.31.3"
