[package]
name = "esp32display"
version = "0.1.0"
authors = ["Tim Boldt <tim.boldt@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = "s"
overflow-checks = false

[profile.dev]
# Rust debug is too slow. 
# For debug builds always builds with some optimization
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "s"

[dependencies]
esp-backtrace = { version = "0.11.0", features = [
    "esp32",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.17.0", features = [ "esp32" ] }
esp-println = { version = "0.9.0", features = ["esp32", "log"] }
log = { version = "0.4.20" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.5.0", features = [
    "esp32",
    "phy-enable-usb",
    "utils",
    "wifi",
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
epd-waveshare = "0.5.0"
tinybmp = "0.5.0"
embedded-hal = "1.0.0"
#il0373 = "0.1.1"



